# husky-mine-rescuer-n

./: .gitignore  Dockerfile  README.md  carltoken.txt  send_discord  setup_routes  shell.nix  shell.nix.old
.ros/log/: latest
can/bus_spec/: david.kcd
docker/: install_packages.sh  robot  robot.sh  ros_term
niosh/: Dockerfile  LICENSE  README.md  shell.nix
niosh/docker/: robot.sh  ros_term
ros/catkin_ws/: frames.gv
ros/catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
ros/catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ros/catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh
ros/catkin_ws/devel/.private/fath_pivot_mount_description/: .catkin  .rosinstall
ros/catkin_ws/devel/.private/flir_camera_description/: .catkin
ros/catkin_ws/devel/.private/husky_base/: .catkin  .rosinstall  (+2 more)
ros/catkin_ws/logs/husky_base/: build.cmake.000.log.stderr
ros/catkin_ws/logs/husky_description/: build.cmake.000.log.stderr
ros/catkin_ws/logs/husky_msgs/: build.cmake.000.log.stderr
ros/catkin_ws/logs/velodyne_pcl/: build.cmake.000.log.stderr
ros/catkin_ws/src/: CMakeLists.txt
ros/catkin_ws/src/can/: CMakeLists.txt
ros/catkin_ws/src/can/arduino/: frames.hpp
ros/catkin_ws/src/can/arduino/drawer/: drawer.ino
ros/catkin_ws/src/can/arduino/node/: node.ino
ros/catkin_ws/src/can/bus_spec/: husky.kcd
ros/catkin_ws/src/can/config/: can.yaml
ros/catkin_ws/src/can/include/can/: can.h  can.hpp
ros/catkin_ws/src/can/launch/: can.launch
ros/catkin_ws/src/can/src/: can.cpp  joy_to_can.cpp  test.cpp
ros/catkin_ws/src/can/test/: can.cpp  can.hpp  test.cpp
ros/catkin_ws/src/control/: CMakeLists.txt  package.xml
ros/catkin_ws/src/control/include/control/: serial.h
ros/catkin_ws/src/control/src/: control.cpp  message.cpp  message.h  serial.cpp
ros/catkin_ws/src/control/src/horizon_legacy/: Number.cpp  linux_serial.cpp
ros/catkin_ws/src/sensors/imu_filter/: CMakeLists.txt  package.xml
ros/catkin_ws/src/sensors/imu_filter/src/: imu_filter.cpp  imu_to_tf.cpp
rviz/: demo_3d.rviz  g_cart_n4.rviz
scripts/: builder.sh  env_ctrl.sh  env_husky.sh  env_pi.sh  frames.gv  getip  husky_startup.sh  install_packages.sh  install_packages_host.sh  install_packages_husky.sh  remote_startup.sh  robot
(+214 files in other folders)
